# 2-Jedha_Fullstack

./: .gitignore  1-1_variables-intro_to_python_for_datascience.ipynb  1-2_basicarithmetic-intro_to_python_for_datascience.ipynb  1-2_basicarithmetic-intro_to_python_for_datascienceipynb.ipynb  1-3_multiple_assignments-intro_to_python_for_datascience.ipynb  1-4_single_line_comment-intro_to_python_for_datascience.ipynb  Data_Analyst_Certification_Project.ipynb  README.md  databricks-template.json  databricks_policy.json  delete_all_dependancies.sh  delete_all_resources.sh  fullstack_test.ipynb  pyproject.toml  recette.html  scraping-browser.py  test-request.html  web-unlocker.html
10_demo_day_project/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bucket_policy.json  data_pipeline.py  kaggle.json  main.py  mlflow.db  requirements.txt  run.sh  script_execution.py  script_execution_colab.py  skin_dataset_custom_cnn.ipynb  skin_dataset_custom_cnn.py  skin_dataset_custom_cnn_mlflow.py  skin_dataset_efficientnet.ipynb  skin_dataset_mobilenetv2.ipynb  skin_dataset_project.ipynb  train_cnn.py  train_transfer_learning.py  upload_to_s3.py
10_demo_day_project/Oily-Dry-Skin-Types/: README.dataset.txt
1_intro_to_python/1_variables_datatypes/: 1-1_variables-intro_to_python_for_datascience.ipynb  1-5_basic_data_types-intro_to_python_for_datascience.ipynb
1_intro_to_python/2_conditions_loops/: 2-1_booleans-intro_to_python_for_datascience.ipynb  2-3_nested_ifs-intro_to_python_for_datascience.ipynb  (+5 more)
1_intro_to_python_variables_datatypes/: 1-4_line_comment-intro_to_python_for_datascience.ipynb  1-6_lists-intro_to_python_for_datascience.ipynb  1-7_dictionnaries-intro_to_python_for_datascience.ipynb  1-8_tuples-intro_to_python_for_datascience.ipynb
2_intro_to_python_conditions_loops/: 1-2_if_statement-intro_to_python_for_datascience.ipynb
6_supervised_Machine_learning/: Calculs_SST_SSR_SSE_R2.xlsx
8_Natural_Language Processing_for_Unsupervised_Learning/: 1-2_learn_about_obi_wan_kenobi_NLPexercice.ipynb.ipynb
9_Topic_Modeling/: 1-1_Code_LSA.ipynb  1-2_Topic_Modeling_exercice.ipynb
Autres_tuto/: scraping-browser.html
Demo_Day_Project/: Dockerfile  requirements.txt
intro_to_python/: 1-7_dictionnaries-intro_to_python_for_datascience.ipynb  1-8_tuples-intro_to_python_for_datascience.ipynb  1-9_project_cleaning-intro_to_python_for_datascience.ipynb
s3fs-env/: pyproject.toml
(+472 files in other folders)
