[tool.poetry]
name = "2-jedha-fullstack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
linearmodels = "^6.0"
pyarrow = "^16.1.0"
jupyter = "^1.0.0"
pytest = "^8.2.2"
ipykernel = "^6.29.5"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"
scrapy-user-agents = "^0.1.1"
scrapy-rotating-proxies = "^0.6.2"
requests = "^2.32.3"
html5lib = "^1.1"
playwright = "^1.46.0"
openai = "^1.43.0"
lime = "^0.2.0.1"
pypdf2 = "^3.0.1"
fuzzywuzzy = "^0.18.0"
plotly = "^5.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
