[tool.poetry]
name = "2-jedha-fullstack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
linearmodels = "^6.0"
pyarrow = "^16.1.0"
jupyter = "^1.0.0"
pytest = "^8.2.2"
ipykernel = "^6.29.5"
scrapy = "^2.11.2"
beautifulsoup4 = "^4.12.3"
scrapy-user-agents = "^0.1.1"
scrapy-rotating-proxies = "^0.6.2"
requests = "^2.32.3"
html5lib = "^1.1"
playwright = "^1.46.0"
openai = "^1.43.0"
lime = "^0.2.0.1"
pypdf2 = "^3.0.1"
fuzzywuzzy = "^0.18.0"
plotly = "^5.24.0"
boto3 = "^1.35.19"
sqlalchemy = "^2.0.35"
python-dotenv = "^1.0.1"
mysql-connector-python = "^9.0.0"
databricks-cli = "^0.18.0"
pyspark = "^3.5.3"
kaleido = "0.2.1"
geopy = "^2.4.1"
mlxtend = "^0.23.1"
xgboost = "^2.1.2"
s3fs = "^2024.10.0"
yfinance = "^0.2.50"
prophet = "^1.1.6"
holidays = "^0.61"
spacy = "^3.8.2"
wordcloud = "^1.9.4"
tensorflow = "^2.18.0"
pydot = "^3.0.3"
graphviz = "^0.20.3"
imageio = "^2.36.1"
scikit-image = "^0.25.0"
tensorflow-docs = {git = "https://github.com/tensorflow/docs"}
mlflow = "^2.19.0"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
kaggle = "^1.6.17"
streamlit = "^1.41.1"
python-multipart = "^0.0.20"
huggingface = "^0.0.1"
hub = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
